--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -7,6 +7,8 @@ SwitchList now allows you to create your own custom, fancy switchlists so you ca
 To get started, download the latest version of SwitchList.  The distribution now includes a folder called 
 Custom Switchlist Examples" that describes how to install a custom switchlist style, and provides the Thomas example shown here.
 
+You can also download a separate zip file containing only the alternate switchlist styles, and use those as a starting point for your custom switchlist.  Download the "Custom Switchlist Templates.zip" file from [http://code.google.com/p/switchlist/downloads/list]
+
 == Example Switchlist Template: Thomas  ==
 
 Let's start off with an example of a switchlist style you could create yourself.
@@ -83,9 +85,10 @@ See the default switchlist for an example of jitter's use.
 
 To create your own special switchlist, create a folder in ~/Library/Application Support/SwitchList with the name of your switch list style, and place a switchlist.html and, if you want, switchlist.css file in there to get started.
 
+As a starting point, borrow an existing stock switchlist style, either from the SwitchList sources here, or get a set of samples by downloading the "Custom Switchlist Templates.zip" compressed archive from [http://code.google.com/p/switchlist/downloads/list]  
+
 For example, if I wanted a new switchlist called "WP", I would make sure the SwitchList folder existed in Library/Application Support, then create a new directory called WP in that folder.  A file in that folder called switchlist.html would hold the template for the switchlist, and a Cascading Style Sheets (CSS) file called "switchlist.css could be placed in the same directory to hold formatting details for the switchlist.  (Look around on the internet for details about CSS files.)   For security, SwitchList only allows files in the template directory to be read from your machine, though a template could load images and other files out on the Internet.
 
-As a starting point, borrow an existing stock switchlist style, either by copying the .html file from inside SwitchList itself, or copy the files straight out of the source code here at code.google.com.  
 
 == Creating Your Own Reports ==
 
