--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -153,6 +153,7 @@ The following variables are accessible from templates:
 || freightCars || list of freight cars being carried in visiting order (contains FreightCar objects) ||
 || layout || current layout. (Layout object) ||
 || randomValue || integer value between 0 and 9, used for putting fingerprints, dogear or other bits of realism on switchlists. ||
+|| interactive || defined and set to 1 if switchlist is used in web interface.  Undefined if template is being used to print a switchlist.  This allows you to hide controls when printing.||
 
 Some of these variables are plain string or number values (such as firstStation or randomValue), while others are objects containing their own values.  Here is a list of the kinds of objects visible in a template, and the values attached to each.
 
