Add separate pages for example layouts.

--- a/wiki/HelpOutline.wiki
+++ b/wiki/HelpOutline.wiki
@@ -94,6 +94,16 @@ Traditional From/To (pg72.html)
 
 Drop Off / Pick Up (pg73.html)
 
+==Example Layouts==
+
+Stockton and Stockton With Divisions (pg80.html)
+
+Vasona Branch (pg81.html)
+
+Waterside Yard (pg82.html)
+
+Oakland (pg83.html)
+
 ==Definitions==
 
 Definitions: (pg100.html)
