Edited wiki page TypicalIndustryFileContents through web user interface.

--- a/wiki/TypicalIndustryFileContents.wiki
+++ b/wiki/TypicalIndustryFileContents.wiki
@@ -13,7 +13,7 @@ You can modify this file to add new potential industry classes and cargos.
 
 typicalIndustry.plist is a text file in Apple's "plist" format - a file using XML tags (values in angle brackets) to mark what each item is.)  The file is an array of potential industry classes (generalized descriptions of an industry.)  Each industry is stored as a dictionary of key/value pairs.  The values in the plist are:
 
-IndustryClass: string name describing the general class of industry.  Used in the pull-down menu for changing the type of industry.
+`IndustryClass:` string name describing the general class of industry.  Used in the pull-down menu for changing the type of industry.
 
 Synonyms: a list of sample industry names that match this industry class.
 
