--- a/wiki/TypicalIndustryFileContents.wiki
+++ b/wiki/TypicalIndustryFileContents.wiki
@@ -17,9 +17,9 @@ typicalIndustry.plist is a text file in Apple's "plist" format - a file using XM
 
 `Synonyms:` a list of sample industry names that match this industry class.
 
-`Cargo:` array of potential cargos.  Each cargo is a dict containing a `Name` (kind of cargo) Incoming (boolean value, true if cargo is coming to the industry, false otherwise), and Rate (percentage of cargos of this type.)  The rates of all cargos should sum to 100. 
+`Cargo:` array of potential cargos.  Each cargo is a dict containing a `Name` (kind of cargo) `Incoming` (boolean value, true if cargo is coming to the industry, false otherwise), and `Rate` (percentage of cargos of this type.)  The rates of all cargos should sum to 100. 
 
-Eventually, Cargo will have two other values for helping pick cargos appropriate for a particular layout: Era (decade where cargo makes sense) and Country (for distinguishing between Canadian, US, British, or German railroad cargos).  My plan is to add controls to the Layout tab to set the era and location of the layout to help automatic cargo suggestions.
+Eventually, Cargo will have two other values for helping pick cargos appropriate for a particular layout: `Era` (decade where cargo makes sense) and `Country` (for distinguishing between Canadian, US, British, or German railroad cargos).  My plan is to add controls to the Layout tab to set the era and location of the layout to help automatic cargo suggestions.
 
 = Example =
 
