--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -97,7 +97,22 @@ As a starting point, borrow an existing stock switchlist style, either from the 
 
 For example, if I wanted a new switchlist called "WP", I would make sure the SwitchList folder existed in Library/Application Support, then create a new directory called WP in that folder.  A file in that folder called switchlist.html would hold the template for the switchlist, and a Cascading Style Sheets (CSS) file called "switchlist.css could be placed in the same directory to hold formatting details for the switchlist.  (Look around on the internet for details about CSS files.)   For security, SwitchList only allows files in the template directory to be read from your machine, though a template could load images and other files out on the Internet.
 
+== Making Switchlists Customizable by Others ==
+Many of the details you'd like in a custom switchlist make it specific to your railroad - the name and address of the railroad in a title block, specific colors or logos on the page, or custom instructions for your crew.  SwitchList 1.2.9.2 and greater allows you to identify layout-specific details, and let others customize the template as they see fit.
 
+To identify portions of the template to customize, you do the following:
+
+{{{
+The railroad president is {{ OPTIONAL_Railroad_Owner | default: Leland Stanford }}
+}}}
+
+What this chunk of template says is that there's an optional setting for the name of the railroad owner.  If a setting called "Railroad Owner" is provided, that name will be used.  Otherwise, the text "The railroad president is Leland Stanford" will be displayed.
+
+The variable name in the double curly brackets must start with OPTIONAL_.  In SwitchList, the rest of the name (with under bars switched to spaces) will be displayed as the setting.  The "default:" word is followed with the text that's used if the optional setting is not provided.
+
+Custom template settings can be used in the middle of the template and can include HTML.  A user might fill in an optional setting called "Railroad Address" with "123 N. First St.\<br\>San Jose CA 95101", where the "\<br\>" tag indicates a line break.
+
+add a template variable expansion with a name beginning with OPTIONAL_ and a default 
 == Creating Your Own Reports ==
 
 SwitchList also allows you to create the standard reports in a style to match your switch lists.  Custom reports can be used for the Car Report, Industry Report, Reserved Car Report, and Yard Report.
@@ -171,6 +186,8 @@ Some of these variables are plain string or number values (such as firstStation 
 || allStationsSortedOrder ||   List of all stations / places on the layout, sorted alphabetically. ||
 || allIndustries || List of all industries.  Unsorted. ||
 || stationsWithWork || List of all the stations where the train has cars to pick up or drop off.  Each station is just a collection of industries with cars to pick up and drop off.  Used for drawing the PICL report. ||
+|| firstStation || Station where the train starts. ||
+|| lastStation || Station where the train ends. ||
 || *Train* || ||
 || name   ||string name for train. ||
 || freightCars ||   list of freight cars in the train in no order. ||
